--- a/app/javascript/pages/about/section-history/section-history-styles.scss
+++ b/app/javascript/pages/about/section-history/section-history-styles.scss
@@ -4,6 +4,7 @@
   padding: rem(30px) 0 rem(30px);
   background-color: $grey-light;
   border-bottom: solid 1px $border;
+  overflow: hidden;
 
   @media screen and (min-width: $screen-l) {
     padding: rem(60px) 0;
@@ -33,9 +34,5 @@
         margin-bottom: rem(10px);
       }
     }
-  }
-
-  .hide-overflow {
-    overflow: hidden;
   }
 }
