--- a/app/javascript/pages/about/section-impacts/section-impacts-styles.scss
+++ b/app/javascript/pages/about/section-impacts/section-impacts-styles.scss
@@ -3,6 +3,7 @@
 .l-section-impacts {
   padding: rem(40px) 0;
   border-bottom: solid 1px $border;
+  overflow: hidden;
 
   h3 {
     font-family: $font-family-1;
@@ -22,9 +23,5 @@
       align-items: center;
       margin-bottom: rem(60px);
     }
-  }
-
-  .hide-overflow {
-    overflow: hidden;
   }
 }
